Remove obsolete code